<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_background"
    tools:context=".view.activity.SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/setting_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@mipmap/close"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/setting_tv_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/setting_backup"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey_background"/>

    <TextView
        android:id="@+id/setting_tv_restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/setting_restore"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey_background"/>

    <TextView
        android:id="@+id/setting_tv_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/setting_file"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey_background"/>

    <TextView
        android:id="@+id/setting_tv_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/setting_clear"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey_background"/>

    <TextView
        android:id="@+id/setting_tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/setting_logout"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey_background"/>

</LinearLayout>