<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/blue_0077D1"
        android:textSize="35sp"
        android:text="@string/hello"/>

    <TextView
        android:id="@+id/login_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/blue_0077D1"
        android:textSize="25sp"
        android:text="@string/use"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/login"/>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_centerInParent="true"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@drawable/radius_border">

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableStart="@drawable/user"
            android:hint="@string/login_user_hint"
            android:background="@color/white"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:hint="@string/login_pass_hint"
                android:drawableStart="@drawable/password"
                android:inputType="textPassword"
                android:background="@color/white"/>

            <ImageView
                android:id="@+id/login_iv_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/eye_close"/>

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/login_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout"
        android:layout_marginStart="265dp"
        android:text="记住密码"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <android.widget.Button
        android:id="@+id/login_btn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="20sp"
        style="@style/Record_btn_Style"/>

    <TextView
        android:id="@+id/login_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue_0077D1"
        android:textSize="17sp"
        android:text="@string/login_register"/>

</RelativeLayout>