<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activity.RegisterActivity">

    <LinearLayout
        android:id="@+id/register_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/primary_green"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/use_register"
            android:textColor="@color/text_secondary"
            android:textSize="20sp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="240dp"
        android:layout_height="176dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="96dp"
        android:src="@drawable/login"/>

    <LinearLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="80dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/register_et_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_field_background"
            android:drawableStart="@drawable/user"
            android:drawablePadding="8dp"
            android:hint="@string/login_user_hint"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/text_secondary" />

        <EditText
            android:id="@+id/register_et_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/input_field_background"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:hint="@string/login_email_hint"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/text_secondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/input_field_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/login_pass_hint"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <ImageView
                android:id="@+id/register_iv_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp"
                android:src="@drawable/eye_close" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/text_secondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_et_checkPwd"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/input_field_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/register_pass_hint"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <ImageView
                android:id="@+id/register_iv_checkHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp"
                android:src="@drawable/eye_close" />

        </LinearLayout>

    </LinearLayout>


    <android.widget.Button
        android:id="@+id/register_btn"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_layout"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/income_button_background"/>

    <TextView
        android:id="@+id/register_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primary_green"
        android:textSize="17sp"
        android:text="@string/register_login"/>

</RelativeLayout>