<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/dialog_budget_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/budget"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/dialog_budget_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:src="@mipmap/dialog_close"/>

    <TextView
        android:id="@+id/dialog_budget_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/dialog_budget_tv"
        android:text="@string/budget_tv"
        android:textSize="20sp"
        android:textColor="@color/green_0C7C0C"/>

    <EditText
        android:id="@+id/dialog_budget_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/dialog_budget_tv1"
        android:layout_alignBaseline="@id/dialog_budget_tv1"
        android:hint="@string/budget_et_hint"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:background="@color/white"/>


    <android.widget.Button
        android:id="@+id/dialog_budget_btn"
        android:layout_below="@id/dialog_budget_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ensure"
        android:textSize="18sp"
        style="@style/Record_btn_Style"/>




</RelativeLayout>